[package]
name = "PowerSession"
version = "0.2.0"
authors = ["Yuwei B <contact@yba.dev>"]
edition = "2021"

license = "MIT"
description = "Asciinema-compatible terminal session recorder for Windows"
readme = "README.md"
homepage = "https://github.com/Watfaq/PowerSession-rs"
repository = "https://github.com/Watfaq/PowerSession-rs"
keywords = ["cli", "asciinema", "terminal", "recorder", "conpty"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.8", features = ["cargo"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

platform-dirs = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.5.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

reqwest = { version = "0.11.22", features = ["blocking", "multipart"] }
tokio = { version = "1.34.0", features = ["full"] }

rustc_version_runtime = "0.3.0"
os_info = "3"
base64 = "0.21"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features=[
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_WindowsProgramming",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]}
